<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zerosx.cloud</groupId>
    <artifactId>zerosx-cloud</artifactId>
    <name>zerosx-cloud</name>
    <version>0.0.2</version>
    <packaging>pom</packaging>

    <modules>
        <!--<module>zerosx-auth</module>-->
        <module>zerosx-gateway</module>
        <module>zerosx-commons</module>
        <module>zerosx-modules</module>
        <module>zerosx-examples</module>
        <module>zerosx-api</module>
        <module>zerosx-sas</module>
        <module>zerosx-tools</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <spring-boot.version>3.1.5</spring-boot.version>
        <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
        <spring-cloud.version>2022.0.4</spring-cloud.version>
        <spring-boot-admin-starter-server.version>3.1.5</spring-boot-admin-starter-server.version>

        <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
        <mybatis.version>3.5.10</mybatis.version>
        <bcprov-jdk15to18.version>1.75</bcprov-jdk15to18.version>

        <commons-io.version>2.12.0</commons-io.version>
        <commons-collections4.verison>4.4</commons-collections4.verison>

        <fastjson.version>1.2.83</fastjson.version>
        <transmittable-thread-local.version>2.14.2</transmittable-thread-local.version>
        <hutool.version>5.8.21</hutool.version>
        <redisson.version>3.24.3</redisson.version>
        <easyexcel.version>3.3.2</easyexcel.version>
        <reflectasm.version>1.11.9</reflectasm.version>
        <easyCaptcha.version>1.6.2</easyCaptcha.version>
        <jackson-core-asl.version>1.9.13</jackson-core-asl.version>
        <userAgent.version>1.21</userAgent.version>
        <velocity.version>1.7</velocity.version>
        <commons-configuration2.version>2.9.0</commons-configuration2.version>
        <commons-configuration.version>1.10</commons-configuration.version>

        <knife4j.version>4.3.0</knife4j.version>

        <reflections.version>0.10.2</reflections.version>
        <cglib.version>3.3.0</cglib.version>

        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-dependencies</artifactId>
                <version>${knife4j.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <!-- 注意这里是import -->
                <scope>import</scope>
            </dependency>
            <!-- common 的依赖配置-->
            <dependency>
                <groupId>com.zerosx.cloud</groupId>
                <artifactId>zerosx-common-bom</artifactId>
                <version>0.0.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.5.14</version>
            </dependency>
            <!--feign api-->
            <dependency>
                <groupId>com.zerosx.cloud</groupId>
                <artifactId>zerosx-api-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zerosx.cloud</groupId>
                <artifactId>zerosx-api-resource</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zerosx.cloud</groupId>
                <artifactId>zerosx-api-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zerosx.cloud</groupId>
                <artifactId>zerosx-api-examples</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- SpringBoot Admin -->
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-starter-server</artifactId>
                <version>${spring-boot-admin-starter-server.version}</version>
            </dependency>
            <!-- mybatis-plus start -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus</artifactId>
                <version>${mybatis-plus-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk15to18</artifactId>
                <version>${bcprov-jdk15to18.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql-connector-java.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>transmittable-thread-local</artifactId>
                <version>${transmittable-thread-local.version}</version>
            </dependency>
            <!-- 验证码生成工具 -->
            <dependency>
                <groupId>com.github.whvcse</groupId>
                <artifactId>easy-captcha</artifactId>
                <version>${easyCaptcha.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity</artifactId>
                <version>${velocity.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-configuration2</artifactId>
                <version>${commons-configuration2.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-configuration</groupId>
                <artifactId>commons-configuration</artifactId>
                <version>${commons-configuration.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <dependency>
                <groupId>com.esotericsoftware</groupId>
                <artifactId>reflectasm</artifactId>
                <version>${reflectasm.version}</version>
            </dependency>
            <!--redisson-->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-data-27</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>${reflections.version}</version>
            </dependency>
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>${cglib.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>${commons-collections4.verison}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>

    <developers>
        <developer>
            <name>javacctvnews</name>
            <email>javacctvnews@163.com</email>
        </developer>
    </developers>

    <profiles>

        <profile>
            <id>local</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <project>local</project>
                <profiles.active>local</profiles.active>
                <nacos.server>127.0.0.1:8848</nacos.server>
                <nacos.namespace>32c6d87e-c726-44c5-a87b-a89b0f91c63d</nacos.namespace>
                <nacos.config.group>local</nacos.config.group>
                <nacos.discovery.group>local</nacos.discovery.group>
                <nacos.username>nacos</nacos.username>
                <nacos.password>nacos</nacos.password>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <project>prod</project>
                <profiles.active>prod</profiles.active>
                <nacos.server>120.79.168.154:8848</nacos.server>
                <nacos.namespace>477f012f-f553-4754-bf64-ee0db8907b8e</nacos.namespace>
                <nacos.config.group>prod</nacos.config.group>
                <nacos.discovery.group>prod</nacos.discovery.group>
                <nacos.username>nacos</nacos.username>
                <nacos.password>nacos</nacos.password>
            </properties>
        </profile>
    </profiles>

    <build>
        <resources>
            <resource>
                <!-- 指定文件路径 -->
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <!-- **表示任意级目录，*表示任意文件 -->
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>oss</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Javadoc -->
            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <compilerArgument>-Xlint:unchecked</compilerArgument>
                        <compilerArguments>
                            <extdirs>libs</extdirs>
                            <bootclasspath>${java.home}/lib/rt.jar${path.separator}${java.home}/lib/jce.jar
                            </bootclasspath>
                        </compilerArguments>
                        <compilerArgs>
                            <arg>--add-exports=java.base/sun.net.util=ALL-UNNAMED</arg>
                            <arg>--add-exports=java.base/java.lang=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <!--<plugin>
                    <groupId>com.spotify</groupId>
                    <artifactId>docker-maven-plugin</artifactId>
                    <version>${docker-maven-plugin.version}</version>
                </plugin>-->
            </plugins>
        </pluginManagement>
    </build>


    <repositories>
        <repository>
            <id>aliyun-repos</id>
            <url>https://maven.aliyun.com/repository/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
